<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="sincronizando">Sincronizando...</string>
    <string name="add">Adicionar usuário</string>
    <string name="username">UserName</string>
    <string name="nome">Nome</string>
    <string name="password">Password</string>
    <string name="endereco">Endereço</string>
    <string name="email">Email</string>
    <string name="data_de_nascimento">Data de Nascimento</string>
</resources>